<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent"
        tools:context=".MainActivityEmploye">


    <EditText
            android:id="@+id/prodId"
            android:hint="@string/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/prodName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/prodPrice"
            android:hint="@string/prix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/update"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>